fix(cards): add overflow for wow

--- a/Stimulus/css/cards/cards.css
+++ b/Stimulus/css/cards/cards.css
@@ -10,6 +10,7 @@
   text-align: center;
   min-height: 250px;
   width: 25%;
+  overflow: hidden;
 }
 .cards_bg-orange {
   background: #e4ae58;
